@@ -10,6 +10,7 @@ package sirius.biz.storage.layer3;
 
 import java.util.Collections;
 import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Spliterator;
 import java.util.function.Consumer;
@@ -20,7 +21,7 @@ import java.util.function.Consumer;
 class VirtualFileWalker implements Spliterator<VirtualFile> {
 
     private TreeVisitorBuilder settings;
-    private List<Iterator<VirtualFile>> stack;
+    private LinkedList<Iterator<VirtualFile>> stack = new LinkedList<>();
     private Iterator<VirtualFile> children;
     private int filesScanned = 0;
 
@@ -69,7 +70,7 @@ class VirtualFileWalker implements Spliterator<VirtualFile> {
             return false;
         }
 
-        children = stack.remove(stack.size() - 1);
+        children = stack.removeLast();
         return true;
     }
 
